--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
 
         toggleButton.addEventListener('click', toggleForms);
 
-        function handleLogin(event) {
+        async function handleLogin(event) {
             event.preventDefault();
             const email = document.getElementById('loginEmail').value;
             const password = document.getElementById('loginPassword').value;
             const errorDiv = document.getElementById('loginError');
-            
+
             try {
-                auth.login(email, password);
+                await auth.login(email, password);
                 window.location.href = 'home.html';
             } catch (error) {
                 errorDiv.textContent = error.message;
@@ -239,7 +239,8 @@
             }
         }
 
-        function handleRegister(event) {
+
+        async function handleRegister(event) {
             event.preventDefault();
             const firstName = document.getElementById('registerFirstName').value;
             const lastName = document.getElementById('registerLastName').value;
@@ -247,19 +248,21 @@
             const password = document.getElementById('registerPassword').value;
             const confirmPassword = document.getElementById('confirmPassword').value;
             const errorDiv = document.getElementById('registerError');
-            
+
             try {
                 if (password !== confirmPassword) {
                     throw new Error("Passwords do not match");
                 }
-                auth.register(firstName, lastName, email, password);
-                auth.login(email, password);
+
+                await auth.register(firstName, lastName, email, password); // await here!
+                await auth.login(email, password);                         // await here!
                 window.location.href = 'home.html';
             } catch (error) {
                 errorDiv.textContent = error.message;
                 errorDiv.style.display = 'block';
             }
         }
+
     </script>
 </body>
 </html> 
